# ROS-Mini-Project

./: README.md  robot.urdf
install/: local_setup.sh  setup.sh
install/lidar_camera_slam/lib/lidar_camera_slam/: lidar_mapper.py  object_detection_node  rgb_camera_node  wasd_teleop.py
install/lidar_camera_slam/share/lidar_camera_slam/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lidar_camera_slam/share/lidar_camera_slam/cmake/: lidar_camera_slamConfig.cmake
install/lidar_camera_slam/share/lidar_camera_slam/launch/: mapping.launch.py  robot_test.launch.py  slam.launch.py  wheeled_robot.launch.py
install/lidar_camera_slam/share/lidar_camera_slam/urdf/: robot.urdf  robot.urdf.xacro  sensors.xacro
install/lidar_camera_slam/share/lidar_camera_slam/worlds/: test_room.world
src/lidar_camera_slam/: setup.py
src/lidar_camera_slam/config/: cartographer_config.lua  rviz_config.rviz  slam.rviz
src/lidar_camera_slam/launch/: complete_demo.launch.py  lidar_mapping.launch.py  point_cloud_converter.launch.py  robot_slam.launch.py  simple_robot.launch.py  simulation.launch  simulation.launch.py  slam_launch.py
src/lidar_camera_slam/lidar_camera_slam/: __init__.py
src/lidar_camera_slam/lidar_camera_slam/nodes/: __init__.py
src/lidar_camera_slam/rviz/: lidar_mapping.rviz  robot.rviz  slam.rviz
src/lidar_camera_slam/src/: object_detection_node.cpp  rgb_camera_node.cpp  slam_node.cpp
src/lidar_camera_slam/worlds/: simple_world.world
(+7 files in other folders)
