<?xml version="1.0"?>
<package format="3">
  <name>lidar_camera_slam</name>
  <version>0.1.0</version>
  <description>SLAM simulation using LiDAR and RGB camera in Gazebo and RViz</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>rviz2</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

